--- a/src/Components/Dashboard/AdminHeader.css
+++ b/src/Components/Dashboard/AdminHeader.css
@@ -25,6 +25,10 @@
     height: 100%;
 }
 
+.dashboard-burgerMenu{
+    display: none;
+}
+
 .dashboard-search-bar{
     width: 100%;
     height: 100%;
@@ -33,7 +37,8 @@
     justify-content: center;
 }
 .search-box{
-    width: 40%;
+    /* width: 40%; */
+    width: 300px;
     height: 60%;
     display: flex;
     border: 0.6px solid #fff;
@@ -63,9 +68,12 @@
     height: 60%;
     display: flex;
     gap: 10px;
-    /* background-color: red; */
     color: #fff;
     font-size: 13px;
+}
+
+.dashboard-right .search-icon{
+    display: none;
 }
 .notification{
     min-width: 40px;
@@ -102,4 +110,42 @@
     height: 37px;
     border-radius: 50%;
     background-color: #373737;
+}
+
+/*Mobile view*/
+@media screen and (width <=  428px) {
+    .dashboard-right .search-icon{
+        display: block;
+    }
+    .dashboard-profile p{
+        display: none;
+    }
+    .dashboard-profile{
+        justify-content: end;
+    }
+    #dashboard-right{
+        min-width: max-content;
+    }
+    .dashboard-logo{
+        display: none;
+    }
+    .dashboard-burgerMenu{
+        display: block;
+    }
+}
+
+/*Tablet view*/
+@media screen and (width <=  768px) {
+    .search-box{
+        display: none;
+    }
+    .dashboard-right .search-icon{
+        display: block;
+    }
+    .dashboard-right{
+        min-width: 250px;
+    }
+    .admin-dashboard-logo img{
+        object-fit: contain;
+    }
 }
