--- a/src/Components/Dashboard/AdminDashboard.css
+++ b/src/Components/Dashboard/AdminDashboard.css
@@ -1,4 +1,6 @@
-.dashboard{
+.admin-dashboard-container{
     width: 100%;
     height: 100vh;
+    color: #000;
+    /* background-color: #000; */
 }
