--- a/src/Components/Dashboard/AdminHeader.css
+++ b/src/Components/Dashboard/AdminHeader.css
@@ -1,151 +1,189 @@
-.dashboard-header{
-    height: 10vh;
-    width: 100%;
-    background: #2C7DA0;
-    display: flex;
-    justify-content: center;
-    font-family: Rubik;
+.dashboard-header {
+  height: 65px;
+  width: 100%;
+  background: #2c7da0;
+  display: flex;
+  justify-content: center;
+  font-family: Rubik;
+  position: sticky;
 }
 
-.dashboard-header-wrapper{
-    width: 90%;
-    height: 100%;
-    display: flex;
-    align-items: center;
+.dashboard-header-wrapper {
+  width: 90%;
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 
-.admin-dashboard-logo{
-    min-width: 40px;
-    height: 70%;
-    display: flex;
-    align-items: center;
+.admin-dashboard-logo {
+  min-width: 40px;
+  height: 70%;
+  display: flex;
+  align-items: center;
 }
-.admin-dashboard-logo img{
-    width: 100%;
-    height: 100%;
+.admin-dashboard-logo img {
+  width: 100%;
+  height: 100%;
 }
 
-.dashboard-burgerMenu{
+.dashboard-burgerMenu {
+  display: none;
+}
+
+.dashboard-search-bar {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.search-box {
+  /* width: 40%; */
+  width: 300px;
+  height: 60%;
+  display: flex;
+  border: 0.6px solid #fff;
+  border-radius: 6px;
+  padding: 2px;
+}
+.search-input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  background-color: #2c7da0;
+  outline: none;
+  color: #fff;
+  padding-left: 10px;
+}
+.cancel-icon {
+  cursor: pointer;
+}
+.search-input::placeholder {
+  color: #fff;
+  /* padding-left: 10px; */
+}
+.search-icon {
+  min-width: 40px;
+  height: 100%;
+  padding: 5px;
+}
+
+.dashboard-right {
+  min-width: 200px;
+  height: 60%;
+  display: flex;
+  gap: 10px;
+  color: #fff;
+  font-size: 13px;
+  border: none;
+}
+
+.dashboard-right .search-icon {
+  display: none;
+}
+.notification {
+  min-width: 40px;
+  height: 100%;
+  /* background-color: #000; */
+  padding: 6.5px;
+  position: relative;
+}
+.notification img {
+  object-fit: contain;
+}
+.notification-quantity {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: #d31010;
+  position: absolute;
+  top: 4px;
+  right: 7px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px;
+}
+
+.dashboard-profile {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.profile-image-holder {
+  width: 37px;
+  height: 37px;
+  border-radius: 50%;
+  background-color: #373737;
+}
+
+.mobile-search-bar {
+  display: none;
+  /* border-bottom: 1px solid #fff; */
+  /* border: 1px solid #fff; */
+  background-color: #2c7da0;
+  outline: none;
+  color: #fff;
+  padding-left: 10px;
+}
+
+/*Mobile view iPhone-13pro*/
+@media screen and (width <= 428px) {
+  .dashboard-right .search-icon {
+    display: block;
+  }
+  .dashboard-profile p {
     display: none;
-}
-
-.dashboard-search-bar{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.search-box{
-    /* width: 40%; */
-    width: 300px;
-    height: 60%;
-    display: flex;
-    border: 0.6px solid #fff;
-    border-radius: 6px;
-    padding: 2px;
-}
-.search-input{
-    width: 100%;
-    height: 100%;
+  }
+  .dashboard-profile {
+    justify-content: end;
+  }
+  #dashboard-right {
+    min-width: max-content;
+    /* background-color: red; */
+    gap: 0px;
+  }
+  .dashboard-logo {
+    display: none;
+  }
+  .dashboard-burgerMenu {
+    display: block;
+  }
+  .mobile-search-bar {
+    display: block;
+    max-width: 200px;
     border: none;
-    background-color: #2C7DA0;
+    border-bottom: 0.6px solid #e8e8e8;
+    background-color: #2c7da0;
     outline: none;
     color: #fff;
-}
-.search-input::placeholder{
-    color: #fff;
     padding-left: 10px;
-}
-.search-icon{
-    min-width: 40px;
-    height: 100%;
-    padding: 5px;
-}
-
-.dashboard-right{
-    min-width: 200px;
-    height: 60%;
-    display: flex;
-    gap: 10px;
+  }
+  .mobile-search-bar::placeholder{
     color: #fff;
-    font-size: 13px;
+  }
 }
 
-.dashboard-right .search-icon{
-    display: none;
-}
-.notification{
-    min-width: 40px;
-    height: 100%;
-    /* background-color: #000; */
-    padding: 6.5px;
-    position: relative;
-}
-.notification img{
-    object-fit: contain;
-}
-.notification-quantity{
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    background-color: #D31010;
-    position: absolute;
-    top: 4px;
-    right: 7px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 10px;
-}
-
-.dashboard-profile{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-.profile-image-holder{
-    width: 37px;
-    height: 37px;
-    border-radius: 50%;
-    background-color: #373737;
-}
-
-/*Mobile view*/
-@media screen and (width <=  428px) {
-    .dashboard-right .search-icon{
-        display: block;
-    }
-    .dashboard-profile p{
-        display: none;
-    }
-    .dashboard-profile{
-        justify-content: end;
-    }
-    #dashboard-right{
-        min-width: max-content;
-    }
-    .dashboard-logo{
-        display: none;
-    }
-    .dashboard-burgerMenu{
-        display: block;
-    }
+/* Mobile view iphone-5 */
+@media screen and (width <= 320px) {
+  .mobile-search-bar {
+    max-width: 110px;
+  }
 }
 
 /*Tablet view*/
-@media screen and (width <=  768px){
-    .search-box{
-        display: none;
-    }
-    .dashboard-right .search-icon{
-        display: block;
-    }
-    .dashboard-right{
-        min-width: 250px;
-    }
-    .admin-dashboard-logo img{
-        object-fit: contain;
-    }
+@media screen and (width <= 768px) {
+  .search-box {
+    display: none;
+  }
+  .dashboard-right .search-icon {
+    display: block;
+  }
+  .dashboard-right {
+    min-width: 250px;
+  }
+  .admin-dashboard-logo img {
+    object-fit: contain;
+  }
 }
