--- a/src/Components/Dashboard/AdminBurgerMenu.css
+++ b/src/Components/Dashboard/AdminBurgerMenu.css
@@ -1,12 +1,26 @@
-.admin-left-nav{
-    height: 100%;
+.admin-burger-menu{
+    height: 100vh;
+    /* height: 100%; */
     background-color: #fff;
-    /* width: 15%; */
     width: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-right: 1px solid #dedede;
+    position: absolute;
+    top: 0px;
+    display: none;
+}
+
+.ImCancelCircle{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+    color: #2c7da0;;
+}
+
+.ImCancelCircle:hover{
+    color: #d31010;
 }
 
 .admin-left-nav-wrapper{
@@ -43,7 +57,7 @@
     height: 100%;
 }
 
-.dashboard-text-container{
+.burgerMenu-text-container{
     width: 100%;
     height: 100%;
     display: flex;
@@ -69,8 +83,8 @@
 
 /* Mobile view iphone-13 */
 @media screen and (width <= 428px) {
-    .admin-left-nav{
-        display: none;
+    .admin-burger-menu{
+        display: flex;
     }
 }
 
@@ -79,10 +93,5 @@
 
 /*Tablet view*/
 @media screen and (width <= 768px) {
-    .dashboard-text-container{
-        display: none;
-    }
-    .admin-left-nav{
-        width: 50px;
-    }
+
 }
