--- a/src/Components/Dashboard/AdminDashboard.css
+++ b/src/Components/Dashboard/AdminDashboard.css
@@ -2,5 +2,14 @@
     width: 100%;
     height: 100vh;
     color: #000;
+    display: flex;
+    flex-direction: column;
     /* background-color: #000; */
+}
+
+.admin-dashboard-holder{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    /* background-color: blue; */
 }
