--- a/src/Components/Dashboard/AdminHeader.css
+++ b/src/Components/Dashboard/AdminHeader.css
@@ -1,12 +1,15 @@
 .dashboard-header {
-  height: 65px;
-  max-width: 100%;
+  height: 67px;
+  /* height: 10vh; */
+  width: 100%;
   background: #2c7da0;
   display: flex;
   justify-content: center;
   font-family: Rubik;
   position: sticky;
+  top: 0px;
   overflow: hidden;
+  position: relative;
 }
 
 .dashboard-header-wrapper {
@@ -121,8 +124,9 @@
 
 .mobile-search-bar {
   display: none;
-  /* border-bottom: 1px solid #fff; */
-  /* border: 1px solid #fff; */
+  max-width: 200px;
+  border: none;
+  border-bottom: 0.6px solid #e8e8e8;
   background-color: #2c7da0;
   outline: none;
   color: #fff;
@@ -142,7 +146,6 @@
   }
   #dashboard-right {
     min-width: max-content;
-    /* background-color: red; */
     gap: 0px;
   }
   .dashboard-logo {
@@ -153,24 +156,20 @@
   }
   .mobile-search-bar {
     display: block;
-    max-width: 200px;
-    border: none;
-    border-bottom: 0.6px solid #e8e8e8;
-    background-color: #2c7da0;
-    outline: none;
-    color: #fff;
-    padding-left: 10px;
   }
   .mobile-search-bar::placeholder{
     color: #fff;
   }
+
 }
 
 /* Mobile view iphone-5 */
 @media screen and (width <= 320px) {
+    .dashboard-right {
+        padding-left: 10px;
+      }
   .mobile-search-bar {
     max-width: 100px;
-    margin-left: 10px;
   }
 }
 
