--- a/src/Components/Dashboard/AdminRightNav.css
+++ b/src/Components/Dashboard/AdminRightNav.css
@@ -17,6 +17,7 @@
     height: 90%;
     display: flex;
     flex-direction: column;
+    gap: 10px;
 }
 
 .dashboard-overview{
@@ -41,9 +42,28 @@
 .select-dashboard-view-wrapper{
     min-width: 170px;
     min-height: 100%;
-    background-color: #0000003b;
-    border-radius: 30px 30px 0px 0px;
-    padding: 20px;
+    background-color: #2C7DA0;
+    border-radius: 25px 25px 0px 0px;
+    display: flex;
+    align-items: end;
+}
+
+.select-dashboard-view-holder{
+    width: 100%;
+    height: max-content;
+    background-color: #2C7DA0;
+    color: #fff;
+    padding-inline-start: 20px;
+}
+#active-state {
+    color: #2C7DA0;
+    background-color: #fff;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+.active-state-container{
+    border-left: 3px solid #2C7DA0;
+    background-color: #fff;
+    color: #2C7DA0;
 }
 
 .selected-view-container{
