--- a/src/Components/Dashboard/AdminRightNav.css
+++ b/src/Components/Dashboard/AdminRightNav.css
@@ -81,22 +81,20 @@
 .selected-view-container {
   width: 100%;
   height: 100%;
-  /* background-color: blueviolet; */
 }
 
 .dashboard-attribute-container {
-  width: 100%;
-  height: 400px;
+  max-width: max-content;
+  height: calc(100% - 67px); 
   display: flex;
-  /* background-color: yellow; */
   flex-direction: column;
   align-items: center;
+  /* padding: 0px 20px 20px 20px; */
   gap: 10px;
-  /* padding-block-start: 20px; */
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
 .dashboard-attribute-container {
-  overflow-y: scroll;
+  overflow: scroll;
   scrollbar-width: thin; /* Firefox */
   scrollbar-color: transparent transparent; /* Firefox */
   -ms-overflow-style: none; /* Internet Explorer and Edge */
@@ -113,14 +111,16 @@
 
 .dashboard-attribute-wrapper {
   width: 95%;
-  min-height: 30px;
+  min-height: 60px;
   display: flex;
+  align-items: center;
   z-index: 10;
   position: sticky;
   top: 0px;
   right: 0px;
 }
 .dashboard-attribute-holder{
+  height: 100%;
   width: max-content;
   background-color: #fff;
   display: flex;
@@ -160,6 +160,10 @@
   align-items: center;
   justify-content: center;
 }
+.reschedules{
+  color: #2c7da0;
+}
+
 .date-attribute {
   font-size: 15px;
   font-weight: 600;
