patient form update

--- a/src/Components/PatientDashboard/PatientAppointmentForm.css
+++ b/src/Components/PatientDashboard/PatientAppointmentForm.css
@@ -93,6 +93,7 @@
   height: 30px;
   outline: none;
   border: none;
+  padding-left: 7px;
   border: 1px solid #c1c1c1;
   box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em,
     rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
