--- a/src/Components/PatientDashboard/PatientAppointmentReview.css
+++ b/src/Components/PatientDashboard/PatientAppointmentReview.css
@@ -1,12 +1,173 @@
-.popUp-screen {
-    width: 100vw;
-    height: 100vh;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: poppins;
-    background-color: #ffffff97;
-    z-index: 4;
-    backdrop-filter: blur(3px);
+.PatientAppointmentReview-container {
+  height: calc(100% - 67px);
+  width: calc(100% - 200px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  bottom: 0px;
+  right: 0px;
+  z-index: 2;
+  font-family: Rubik;
+  color: #373737;
+  background-color: #F5F5F5;
+}
+
+.PatientAppointmentReview-wrapper{
+  width: 60%;
+  height: 90%;
+  border: 2px solid #2c7da0;
+  border-radius: 7px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.PatientAppointmentReview-container1{
+  width:50%;
+  height: 15%;
+  /* background-color: red; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #2c7da0;
+  text-align: center;
+}
+
+
+.PatientAppointmentReview-container2{
+  width:50%;
+  height: 70%;
+  /* background-color: blue; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.PatientAppointmentReview-content{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.PatientAppointmentReview-content p{
+  font-weight: 600;
+  font-size: 17px;
+  text-align: center;
+}
+/* .PatientAppointmentReview-content span{} */
+
+.PatientAppointmentReview-container3{
+  width:50%;
+  height: 15%;
+  /* background-color: purple; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+
+.PatientAppointmentReview-btn1 {
+  width: 120px;
+  height: 40px;
+  text-align: center;
+  font-size: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #dbdbdb;
+  background-color: #2c7da0;
+  border-radius: 7px;
+  cursor: pointer;
+}
+
+.PatientAppointmentReview-btn1:hover {
+  border: 2px solid;
+  background-color: #fff;
+  color: #2c7da0;
+}
+.PatientAppointmentReview-btn2 {
+  width: 120px;
+  height: 40px;
+  text-align: center;
+  font-size: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #2c7da0;
+  border: 2px solid #2c7da0;
+  border-radius: 7px;
+  cursor: pointer;
+}
+
+.PatientAppointmentReview-btn2:hover {
+  background-color: #2c7da0;
+  color: #dbdbdb;
+  
+}
+
+
+
+
+/* Mobile view iphone-13 */
+@media screen and (width <= 480px) {
+  .PatientAppointmentReview-container {
+    min-width: 100%;
   }
+
+}
+
+/* Mobile view iphone-5 */
+@media screen and (width <= 320px) {
+}
+/* Mobile view iphone-XR */
+@media screen and (width <= 375px) {
+  .PatientAppointmentReview-wrapper{
+    width: 95%;
+    border: none;
+  }
+  .PatientAppointmentReview-container1{
+    /* background-color: aqua; */
+    font-size: 15px;
+    height: 15%;
+    width: 100%;
+  }
+  .PatientAppointmentReview-container2{
+    width: 95%;
+    height: 65%;
+    /* background-color: green; */
+    gap: 0px;
+    justify-content: space-between;
+  }
+  .PatientAppointmentReview-container3{
+    width: 100%;
+    height: 20%;
+    gap: 20px;
+    /* background-color: aqua; */
+  }
+}
+
+/*Tablet view*/
+@media screen and (width <= 768px) {
+  .PatientAppointmentReview-container {
+    width: calc(100% - 50px);
+  }
+}
+
+/* big-tablet */
+@media screen and (width <= 834px) {
+  .PatientAppointmentReview-wrapper{
+    width: 80%;
+  }
+  .PatientAppointmentReview-container1{
+    width: 80%;
+  }
+  .PatientAppointmentReview-container3{
+    width: 100%;
+    gap: 20px;
+  }
+}
