--- a/src/Components/LandingPage/Docmate.css
+++ b/src/Components/LandingPage/Docmate.css
@@ -187,7 +187,128 @@ flex-direction: column;
     object-fit: cover;
 }
 
-@media screen and (width:450px) {
+
+@media screen and (max-width:820px) {
+    .docmatebodyleft{
+        width: 85%;
+        height: 100%;
+        background-color: red;
+    
+    }
+
+    .upperdocdiv{
+        width: 75%;
+        height: 25%;
+        background-color: palevioletred;
+    
+        }
+        .upperdocdiv >p{
+            font-size: 15px;
+            font-weight: 300;
+            }
+            
+            .upperdocdiv >h1{
+            font-size: 20px;
+            font-weight: 500;
+            }
+
+            .lowerdocdiv{
+                width: 100%;
+                height:80% ;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                  flex-direction: column;
+                  gap: 5px;
+              }
+              
+              .conbodydiv{
+                  width: 100%;
+                  height: 30%;
+                  background-color: yellow;
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+              }
+
+              .docmatebodyright{
+                width: 55%;
+                height: 100%;
+                background-color: aqua;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                flex-direction: column;
+                }
+
+                .upperimage{
+                    width: 80%;
+                    height: 55%;
+                    display: flex;
+                    align-items:flex-end;
+                    justify-content: flex-start;
+                    gap: 15px;
+                    
+                }
+
+                .upperleftimage{
+                    width: 35%;
+                    height: 55%;
+                    background-color: blue;
+                
+                }
+                
+                .upperleftimage >img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+
+                .upperimage{
+                    width: 100%;
+                    height: 55%;
+                    background-color: green;
+                    display: flex;
+                    align-items:flex-end;
+                    justify-content: flex-start;
+                    gap: 15px;
+                    
+                }
+                
+                .upperleftimage{
+                    width: 45%;
+                    height: 55%;
+              
+                
+                }
+                
+                .upperleftimage >img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+                
+                .upperrightimage{
+                    width: 49%;
+                    height:80%;
+                    background-color: #000;
+                }
+
+                .upperrightimage >img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+                
+}
+
+
+
+
+
+
+
+@media screen and (max-width:450px) {
     .docmatebody{
         width: 100%;
         height: 120vh;
@@ -201,7 +322,6 @@ flex-direction: column;
     .docmatebodyleft{
         width: 85%;
         height: 100%;
-        background-color: none; 
         display: flex;
         align-items: center;
         justify-content: center;
@@ -217,23 +337,18 @@ flex-direction: column;
         
         .upperdocdiv >p{
         font-size: 15px;
-        font-family: Poppins;
         font-weight: 300;
-        color: #2C7DA0;
         }
         
         .upperdocdiv >h1{
         font-size: 20px;
-        font-family: Poppins;
         font-weight: 500;
         }
 
         .lowerdocdiv{
             width: 100%;
             height:80% ;
-            background-color: none;
             display: flex;
-             margin-left: 0px;
             align-items: center;
             justify-content: center;
               flex-direction: column;
@@ -243,18 +358,15 @@ flex-direction: column;
           .conbodydiv{
               width: 100%;
               height: 35%;
-              background-color: none;
+              background-color: gree;
               display: flex;
               align-items: center;
               justify-content: center;
-              
-          
           }
           
           .leftcondiv{
               width: 35%;
               height: 90%;
-              background-color: none;
               display: flex;
               align-items: center;
               justify-content: space-around;
@@ -266,12 +378,7 @@ flex-direction: column;
             height: 30%;
             background-color: grey;
             border-radius: 70px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
             font-size: 20px;
-            color: white;
-            font-family: Poppins;
             font-weight: 400;
         }
         
@@ -284,8 +391,6 @@ flex-direction: column;
         .rightcondiv{
             width: 75%;
             height: 91%;
-            background-color: none;
-            gap: 0px;
             display: flex;
             align-items: none;
             justify-content: flex-start;
@@ -294,15 +399,13 @@ flex-direction: column;
 
         .rightcondiv >h1{
            font-size: 18px;
-           font-family: Poppins;
            font-weight: 600;
         }
 
         .rightcondiv >p{
            font-size: 13px;
-           font-family: Poppins;
            font-weight: 400;
-           color: rgb(85, 83, 83);
+        
            
         }
         
@@ -316,15 +419,6 @@ flex-direction: column;
         flex-direction: column;
         }
         
-        .upperimage{
-            width: 100%;
-            height: 55%;
-            background-color: none;
-            display: none;
-            align-items:flex-end;
-            justify-content: flex-start;
-            gap: 15px;
-            
-        }
+ 
    
 }
