--- a/src/Components/LandingPage/Hero.css
+++ b/src/Components/LandingPage/Hero.css
@@ -1,15 +1,13 @@
-
-
-.HeroPage{
-    width: 100%;
+.HeroPage {
+    width: 100vw;
     height: 100vh;
-     background-image: linear-gradient(#D2E1F2, #ECEAF7); 
-     display: flex;
-     /* flex-direction: row; */
-    
+    background-image: linear-gradient(#D2E1F2, #ECEAF7);
+    display: flex;
+    /* flex-direction: row; */
+
 }
 
-.leftHero{
+.leftHero {
     width: 51%;
     height: 100%;
     /* background-color: yellow; */
@@ -22,44 +20,44 @@
     padding-top: 50px;
 }
 
-.Docdiv{
+.Docdiv {
     width: 80%;
     height: 30%;
     /* background-color: pink; */
     display: flex;
     align-items: center;
-    justify-content:flex-start;
+    justify-content: flex-start;
 }
 
-.Docdiv >h1{
+.Docdiv>h1 {
     font-size: 50px;
     font-weight: 500;
     font-family: Poppins;
 }
 
-.Docdiv >h1 > span{
-color:#2c7da0 ;
+.Docdiv>h1>span {
+    color: #2c7da0;
 }
 
-.makingdiv{
+.makingdiv {
     width: 80%;
     height: 15%;
     /* background-color: gray; */
     display: flex;
     align-items: flex-end;
     justify-content: flex-start;
-    
+
 }
 
-.makingdiv > h1{
-   font-size: 35px;
-   font-weight: 500;
-   font-family: Popkins;
-   color: rgb(34, 32, 32);
+.makingdiv>h1 {
+    font-size: 35px;
+    font-weight: 500;
+    font-family: Popkins;
+    color: rgb(34, 32, 32);
 }
 
-.btndiv{
-    width:80% ;
+.btndiv {
+    width: 80%;
     height: 15%;
     /* background-color:purple; */
     display: flex;
@@ -67,18 +65,19 @@ color:#2c7da0 ;
     justify-content: flex-start;
 }
 
-.started{
+.started {
     width: 150px;
     height: 47px;
     border: none;
-    background-color:#2c7da0;
+    background-color: #2c7da0;
     border-radius: 2px;
     font-size: 15px;
-    font-family: Popkins;
+    font-family: Poppins;
     color: white;
+    cursor: pointer;
 }
 
-.rightHero{
+.rightHero {
     width: 48%;
     height: 100%;
     /* background-color: red; */
@@ -87,105 +86,124 @@ color:#2c7da0 ;
     justify-content: flex-start
 }
 
-.imgdiv{
+.imgdiv {
     width: 80%;
     height: 80%;
     /* background-color: blue; */
 
 }
 
-@media  screen and (width : 450px) {
-    .HeroPage{
-        width: 100%;
-        height: 90vh;
-         background-image: none;
-         background-color: none;
-         display: flex;
-         justify-content: none;
-         align-items: none;
-         /* flex-direction: row; */
-        
+@media screen and (max-width:820px) {
+    .leftHero {
+        width: 60%;
+        display: flex;
+
+
     }
 
-    .leftHero{
+    .Docdiv {
+        width: 90%;
+        height: 35%;
+    }
+
+    .Docdiv>h1 {
+        font-size: 36.5px;
+        font-weight: 400;
+    }
+
+
+    .makingdiv {
+        width: 90%;
+        height: 18%;
+        display: flex;
+    }
+
+    .makingdiv>h1 {
+        font-size: 35px;
+        font-weight: 500;
+
+    }
+
+    .btndiv {
+        width: 90%;
+        height: 15%;
+    }
+
+    .rightHero {
+        width: 50%;
+
+    }
+
+    .imgdiv {
         width: 100%;
         height: 100%;
-         background-color: none; 
-        display: flex;
-        align-items:center;
-        justify-content: center;
-         margin-right: 0px; 
-         justify-content: none;
-        flex-direction: column;
-        gap: 0px;
-        padding-left:2 0px;
-        padding-top: 0px; 
+        object-fit: cover;
+
+
     }
 
-    .Docdiv{
-        width: 90%;
-        height: 60%;
-        background-color: none;
-        display: flex;
-        align-items: center;
-        justify-content:none;
-        padding-top: 80px;
+}
+
+
+
+
+
+
+@media screen and (max-width : 428px) {
+
+    .HeroPage {
+        height:  70vh;
+        background-image: linear-gradient(#D2E1F2, #ECEAF7);
+        /* padding-block: 20px; */
     }
-    
-    .Docdiv >h1{
-        font-size: 35px;
+
+    .leftHero {
+        width: 100%;
+        height: 100%;
+
+    }
+
+    .Docdiv {
+        width: 100%;
+        height:  60%;
+        padding-block-start: 20px;
+    }
+
+    .Docdiv>h1 {
+        font-size: 28px;
         font-weight: 500;
         font-family: Poppins;
 
     }
 
-    .makingdiv{
-        width: 90%;
-        height:25%;
-        background-color: none;
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-
-        
+    .makingdiv {
+        width: 100%;
+        height: 20%;
+  
     }
 
-    .makingdiv > h1{
-        font-size: 40px;
+    .makingdiv>h1 {
+        font-size: 25px;
         font-weight: 300;
-        font-family: Popkins;
-        color: rgb(34, 32, 32);
-        
-     }
+    }
 
-    .rightHero{
+    .rightHero {
         width: 48%;
         height: 100%;
         display: none;
 
     }
 
-    .btndiv{
-        width:90% ;
-        height:15%;
-        /* background-color:purple; */
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
+    .btndiv {
+        width: 100%;
+        height: 20%;
+     
+
     }
-    
-    .started{
-        width: 120px;
-        height: 40px;
-        border: none;
-        background-color:#2c7da0;
-        border-radius: 2px;
-        font-size: 12px;
-        font-family: Poppins;
-        color: white;
+
+    .started {
+        width: 130px;
+        height: 45px;
+
     }
 }
-
-
-
-
