--- a/src/Components/LandingPage/ServiceCard.css
+++ b/src/Components/LandingPage/ServiceCard.css
@@ -5,6 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-block: 20px;
 }
 
 .cardholderdiv{
@@ -16,20 +17,20 @@
     justify-content: space-around;
     
 }
-/* .uppercardholderdiv{
+.uppercardholderdiv{
     width: 100%;
-    height:48%; */
+    height:48%; 
     /* background-color: pink; */
-    /* display: flex;
+     display: flex;
     justify-content:space-between;
     gap: 20px;
-} */
+}
 
  .carddiv{
     width: 45.5%;
     height: 45%;
     background-color: white;
-    box-shadow: 0px 0px 20px 1px lightgrey;
+    /* box-shadow: 0px 0px 20px 1px lightgrey; */
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -37,10 +38,12 @@
     gap: 10px;
     border-radius: 5px;
    
-
-
 } 
-
+.carddiv>img{
+    width: 40%;
+    height: 40%;
+    object-fit: contain;
+}
 
   .carddiv > h1{
 font-size: 25px;
@@ -50,7 +53,7 @@ font-weight: 700;
 }
 
 .carddiv > p{
-font-size: 17px;
+font-size: 15px;
 font-weight: 450;
  font-family: Poppins;
 text-align: center;
@@ -69,6 +72,12 @@ text-align: center;
     border-radius: 5px;
 
 } 
+
+.carddiv2 >img{
+    width: 50%;
+    height: 50%;
+    object-fit: contain;
+}
   .carddiv2 > h1{
 font-size: 25px;
 font-weight: 700;
@@ -77,22 +86,22 @@ text-align: center;
 
 }
 .carddiv2 > p{
-    font-size: 17px;
+    font-size: 15px;
     font-weight: 450;
 font-family: Poppins;
 text-align: center;
 
 }
 
-/* .lowercardholderdiv{
+.lowercardholderdiv{
   
     width: 100%;
     height:48%;
-    /* background-color: pink; */
+    background-color: pink;
     /* display: flex;
     justify-content:space-between;
     gap: 20px; */
-/* }  */
+ } 
 
 .carddiv3{
     width: 45.5%;
@@ -106,6 +115,13 @@ text-align: center;
     border-radius: 5px;
 
 } 
+
+.carddiv3 >img{
+    width: 50%;
+    height: 50%;
+    object-fit: contain;
+}
+
 .carddiv3 > h1{
     font-size: 25px;
 font-weight: 700;
@@ -113,7 +129,7 @@ font-family: Poppins;
 }
 
 .carddiv3 > p{
-    font-size: 17px;
+    font-size: 15px;
     font-weight: 450;
     font-family: Poppins;
     text-align: center;
@@ -135,6 +151,12 @@ font-family: Poppins;
 
 } 
 
+.carddiv4 >img{
+    width: 50%;
+    height: 50%;
+    object-fit: contain;
+}
+
 .carddiv4 > h1{
     font-size: 25px;
 font-weight: 700;
@@ -142,18 +164,44 @@ font-family: Poppins;
 }
 
 .carddiv4 > p{
-    font-size: 17px;
+    font-size: 15px;
     font-weight: 450;
     font-family: Poppins;
     text-align: center;
     
     }
 
+@media screen and (max-width:820px) {
+
+    .cardholderdiv{
+      /* background: #000;  */
+      width: 90%; 
+    }
+
+    .carddiv{
+        width: 45%;
+        height: 45%;
+    
+    } 
+
+    .carddiv > img{
+        width: 30%;
+        height: 30;
+       object-fit: contain;
+    } 
+
+    .carddiv2{
+        width: 45%;
+        height: 45%;
+    
+   
+
+    } 
+}
 
 
 
-
-    @media screen and (width : 450px){
+    @media screen and (width : 428px){
         .servicecardbody{
             width: 100%;
             height: auto;
@@ -169,23 +217,17 @@ font-family: Poppins;
             background-color: none;
             display: flex;
             justify-content: space-around;
-            /* flex-direction: column; */
             align-items: center;
             flex-wrap: wrap;
-            /* gap: 10px; */
+   
             
         }
 
         .carddiv{
             width: 70%;
             height: 45%;
-            background-color: none;
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            justify-content: space-evenly;
-            border-radius: 5px;
-            /* display: none; */
+            border-radius: 3px;
+          
         } 
 
         .carddiv >img{
@@ -204,74 +246,49 @@ font-family: Poppins;
             .carddiv > p{
             font-size: 15px;
             font-weight: 450;
-             font-family: Poppins;
             text-align: center;
             
             }
 
         .carddiv2{
             width: 70%;
-            height: 30%;
-            background-color: none;
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            justify-content: space-around;
-            border-radius: 5px;
-         /* display: none; */
-
+            height: 45%;
+            border-radius: 3px;
         } 
+
+        .carddiv2 >img{
+            width: 20%;
+            height: 40%;
+            object-fit: contain;
+        }
 
         .carddiv2 > h1{
             font-size: 20px;
             font-weight: 700;
-            font-family: Poppins;
             text-align: center;
             
             }
             .carddiv2 > p{
-                font-size: 15px;
+                font-size: 13px;
                 font-weight: 450;
             font-family: Poppins;
             text-align: center;
             
             }
 
-        /* .uppercardholderdiv{
-            width: 100%;
-            height:40%;
-            background-color: rgb(217, 18, 51);
-            display: flex;
-            flex-wrap: wrap;
-            align-items: center;
-            gap: 20px;
-        } */
-
-
-        /* .lowercardholderdiv{
-  
-            width: 100%;
-            height:48%;
-            background-color: none;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content:space-between;
-            gap: 20px;
-        } */
 
 
         .carddiv3{
             width: 70%;
-            height: 40%;
-            background-color: none(173, 19, 19);
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            justify-content: space-around;
-            border-radius: 5px;
-        
-       
+            height: 45%;
+            border-radius: 3px;
         } 
+
+        .carddiv3 >img{
+            width: 20%;
+            height: 40%;
+            object-fit: contain;
+        }
 
         .carddiv3 > h1{
             font-size: 20px;
@@ -280,7 +297,7 @@ font-family: Poppins;
         }
         
         .carddiv3 > p{
-            font-size: 15px;
+            font-size: 13px;
             font-weight: 450;
             font-family: Poppins;
             text-align: center;
@@ -290,28 +307,26 @@ font-family: Poppins;
 
         .carddiv4{
             width: 70%;
-            height: 40%;
-            background-color: none(60, 5, 5);
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            justify-content: space-around;
-            border-radius: 5px;
-        
-         /* display: none; */
-
+            height: 45%;
+            border-radius: 3px;
+      
         } 
+
+        .carddiv4 >img{
+            width: 20%;
+            height: 40%;
+            object-fit: contain;
+        }
 
         .carddiv4 > h1{
             font-size: 20px;
         font-weight: 700;
-        font-family: Poppins;
+  
         }
         
         .carddiv4 > p{
-            font-size: 15px;
+            font-size: 13px;
             font-weight: 450;
-            font-family: Poppins;
             text-align: center;
             
             }
