--- a/src/Components/LandingPage/Services.css
+++ b/src/Components/LandingPage/Services.css
@@ -20,19 +20,48 @@
 .textholder > h1{
     font-size: 52px;
     font-weight: 600;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:Poppins;
     color: #2c7da0;
 }
 
 .textholder > p{
     font-size: 20px;
     font-weight: 350;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Poppins;
     text-align: center;
     
 }
 
-@media screen and (width:450px) {
+@media screen and ( max-width: 820px) {
+    #serivicediv{
+        width: 100vw;
+        height: max-content;
+    
+    }
+
+    .textholder{
+        width: 57%;
+        height: 60%;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .textholder > h1{
+        font-size: 35px;
+        font-weight: 700;
+        color: #2c7da0;
+    }
+}
+
+
+
+
+
+
+
+
+@media screen and (width:428px) {
     .serivicediv{
         width: 100vw;
         height: 50vh;
@@ -55,7 +84,7 @@
     .textholder > h1{
         font-size: 25px;
         font-weight: 500;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-family:poppins;
         color: #2c7da0;
         text-align: center;
     }
