--- a/src/Components/PopUp/PopUp.css
+++ b/src/Components/PopUp/PopUp.css
@@ -12,15 +12,16 @@
 }
 
 .popUp-message-container {
-  width: 50%;
+  width: 45%;
   height: 50%;
   background-color: #ffff;
   border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap:40px;
+  gap: 50px;
   flex-direction: column;
+  padding-inline: 30px;
   box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px,
     rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
 }
@@ -31,6 +32,8 @@
 }
 
 .popUp-message-container p{
-    font-size: 24px;
-    font-weight: 550;
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+    color: #373737;
 }
