--- a/src/Components/LandingPage/HomePageHeader.css
+++ b/src/Components/LandingPage/HomePageHeader.css
@@ -1,158 +1,160 @@
+.mainHeader {
+  width: 100vw;
+  height: 90px;
+  background-color: white;
+  margin-bottom: 10px;
+  display: flex;
+  position: fixed;
+  z-index: 4;
+  font-family: poppins;
+}
 
+.landingPageBurgerMenu {
+  display: none;
+}
 
-.mainHeader{
-    
-    width: 100vw;
-    height: 90px;
-    background-color: white;
-    margin-bottom: 10px;
+.Mainheaderlogo {
+  width: 15%;
+  height: 100%;
+  /* background-color: aquamarine;  */
+  display: flex;
+  align-items: center;
+}
+
+.Mainheaderlogo > img {
+  width: 80%;
+  height: 80%;
+  object-fit: contain;
+  margin-left: 80px;
+  justify-content: center;
+  display: flex;
+}
+
+.headerhome {
+  width: 50%;
+  height: 100%;
+  /* background-color: #dcd8d8; */
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+nav {
+  font-size: 15px;
+  font-weight: 200;
+  font-family: poppins;
+  cursor: pointer;
+}
+
+nav:hover {
+  color: #2c7da0;
+  font-size: 16px;
+}
+
+.registerbody {
+  width: 25%;
+  height: 100%;
+  /* background-color: #7fffd4; */
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.headsignup {
+  width: 47%;
+  height: 60%;
+  border-radius: 5px;
+  border: 1.5px solid #2c7da0;
+  box-shadow: 2px 2px 4px #bcbaba;
+  font-size: 20px;
+  font-family: poppins;
+  color: #2c7da0;
+  background-color: white;
+  position: relative;
+}
+.headsignup:hover{
+  /* border: 2px solid #2c7da0; */
+  cursor: pointer;
+  border: none;
+  background-color: #2c7da0;
+  color: #fff;
+}
+
+.headlogin {
+  width: 47%;
+  height: 60%;
+  border: none;
+  background-color: #2c7da0;
+  border-radius: 5px;
+  box-shadow: 2px 2px 4px #bcbaba;
+  font-size: 20px;
+  font-family: poppins;
+  color: white;
+  position: relative;
+}
+
+.headlogin:hover{
+  cursor: pointer;
+  border: 1.5px solid #2c7da0;
+  background-color: #fff;
+  color: #2c7da0;
+}
+
+@media screen and (max-width: 820px) {
+  .mainHeader {
     display: flex;
-    position: fixed;
-    z-index: 4;
-    
+    justify-content: space-between;
+    align-items: center;
+    padding-inline-end: 20px;
+  }
 
-}
+  .landingPageBurgerMenu {
+    display: flex;
+    width: 40px;
+    height: 50%;
+    cursor: pointer;  
+  }
 
-.landingPageBurgerMenu{
-    display:  none;
-}
-
-.Mainheaderlogo{
-    width: 15%;
+  .Mainheaderlogo {
+    width: 20%;
     height: 100%;
-     /* background-color: aquamarine;  */
-     display: flex;
-     align-items: center;
-
-}
-
-.Mainheaderlogo>img{
-    width: 80%;
-    height: 80%;
-    object-fit:contain;
-    margin-left: 80px;
-    justify-content: center;
-    display: flex;  
-}
-
-.headerhome{
-    width:50%;
-    height: 100%;
-    /* background-color: #dcd8d8; */
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+  }
 
-    
-  
+  .headerhome {
+    display: none;
+  }
+
+  .registerbody {
+    display: none;
+  }
 }
 
-nav{
-    font-size: 15px;
-    font-weight: 200;
-    font-family: popkins;
+@media screen and (max-width: 428px) {
+  .mainHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .Mainheaderlogo {
+    width: 30%;
+    height: 100%;
+  }
+
+  .Mainheaderlogo > img {
+    width: 50%;
+    height: 50%;
+    object-fit: contain;
+    margin-left: 15px;
+  }
+
+  .landingPageBurgerMenu {
+    display: flex;
+    width: 40px;
+    height: 30%;
     cursor: pointer;
-}
-
-nav:hover{
-    color: #2C7DA0;
-    font-size: 16px;
-}
-
-.registerbody{
-    width: 25%;
-    height: 100%;
-    /* background-color: #7fffd4; */
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-}
-
- .headsignup{
-    width: 47%;
-    height: 60%;
-    border-radius: 5px;
-    border:1.5px solid  #2c7da0;
-    box-shadow: 2px 2px 4px #bcbaba;
-    font-size: 20px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: #2c7da0;
-    background-color: white;
-    
-
-
-} 
-
- .headlogin{
-    width: 47%;
-    height: 60%;
-    border: none;
-    background-color:#2c7da0;
-    border-radius: 5px;
-    box-shadow: 2px 2px 4px #bcbaba;
-    font-size: 20px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: white;
-} 
-
-@media screen and (max-width : 820px) {
-    .mainHeader{
-        display: flex;
-        justify-content: space-between;align-items: center;        
-    }
-
-
-    .landingPageBurgerMenu{
-        display: flex;
-        width: 40px;
-        height: 50%;
-        cursor: pointer;
-    }
-
-    .Mainheaderlogo{
-        width: 20%;
-        height: 100%;
-         display: flex;
-         align-items: center;
-    }
-
-.headerhome{
-    display: none;
-}
-
-
-
-.registerbody{
-    display: none;
-}
-}
-
-@media screen and (max-width:428px) {
-    .mainHeader{
-        display: flex;
-        justify-content: space-between;align-items: center;        
-    }
-
-    .Mainheaderlogo{
-        width: 30%;
-        height: 100%;  
-    
-    }
-
-    .Mainheaderlogo>img{
-        width: 50%;
-        height: 50%;
-        object-fit:contain;
-        margin-left: 15px;
-    
-    }
-
-    .landingPageBurgerMenu{
-        display: flex;
-        width: 40px;
-        height: 30%;
-        cursor: pointer;
-    }
-
-
+   
+  }
 }
